--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "http-errors": "~1.6.3",
     "js-md5": "^0.7.3",
     "mongodb": "^3.6.4",
+    "mongodb-client-encryption": "^1.2.1",
     "morgan": "~1.9.1",
-    "node-sass-middleware": "0.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
